# yakuse_be

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.txt  DockerfileDev  README.Docker.md  README.md  alembic.ini  compose.yaml  conftest.py  dev.py  prod_app.db  pyproject.toml  pytest.ini  run.py  run_test.py  serviceAccountKey.json  sql_app.db  sql_prod.db  test_app.db  todo.md  tool.py
app/: main.py
app/article/: __init__.py  article_dtos.py  article_model.py  article_router.py  article_services.py  article_services_depr.py
app/business/: __init__.py  business_dtos.py  business_model.py  business_router.py  business_seed.py  business_services.py  business_services_dep.py
app/business_category/: __init__.py  business_category_dtos.py  business_category_model.py  business_category_router.py  business_category_seed.py  business_category_service.py
app/health_check/: __init__.py  health_check_model.py  health_check_routers.py  routers.py  routes.py
app/libs/: images_service.py  jwt_lib.py  password_lib.py  sql_alchemy_lib.py  supabase_client.py  upload_image_to_supabase.py
app/rating/: __init__.py  rating_dtos.py  rating_model.py  rating_router.py  rating_service.py
app/user/: __init__.py  routers.py  services.py  user_dtos.py  user_firebase_services.py  user_model.py  user_router.py  user_seed.py  user_services.py  user_services_deperceted.py
app/user_need/: __init__.py  user_need_dtos.py  user_need_model.py  user_need_router.py  user_need_seed.py  user_need_services.py  user_need_services_depr.py
app/utils/: __init__.py  error_parser.py  optional.py
migrations/: env.py  script.py.mako
migrations/versions/: 0c38f5a263c9_initial_migration_after_reinitialization.py  1523ccfabc33_add_article_model_table.py  (+15 more)
path/: serviceAccountKey.json
(+68 files in other folders)
