[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["DewaSRY <sdewa6645@gmail.com>"]
readme = "README.md"
packages = [{ include = "ysuke_be", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
cryptography = "^43.0.0"
annotated-types = "^0.7.0"
passlib = { extras = ["hash"], version = "^1.7.4" }
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
python-multipart = "^0.0.9"
google-auth = "^2.33.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
